--- a/mysql/values.yaml
+++ b/mysql/values.yaml
@@ -1,4 +1,5 @@
-resources:
-  requests:
-    memory: 128Mi
-    cpu: 100m
+mysql:
+  resources:
+    requests:
+      memory: 128Mi
+      cpu: 100m
