--- a/acmhelm/managedclustersetbinding.yaml
+++ b/acmhelm/managedclustersetbinding.yaml
@@ -3,7 +3,7 @@
 apiVersion: cluster.open-cluster-management.io/v1beta2
 kind: ManagedClusterSetBinding
 metadata:
-  name: openshift
+  name: all-openshift-clusters
   namespace: openshift-gitops
 spec:
-  clusterSet: openshift
+  clusterSet: all-openshift-clusters
